--- a/package.json
+++ b/package.json
@@ -8,15 +8,20 @@
     "@types/babel-core": "^6.25.5",
     "@types/case-sensitive-paths-webpack-plugin": "^2.1.2",
     "@types/chalk": "^2.2.0",
+    "@types/clipboard": "^2.0.1",
     "@types/dotenv": "^4.0.3",
     "@types/eslint": "^4.16.3",
     "@types/extract-text-webpack-plugin": "^3.0.3",
     "@types/fs-extra": "^5.0.4",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/jest": "^23.3.2",
+    "@types/js-cookie": "^2.2.0",
+    "@types/lodash": "^4.14.116",
     "@types/object-assign": "^4.0.30",
     "@types/promise": "^7.1.30",
     "@types/qs": "^6.5.1",
+    "@types/react-loadable": "^5.4.1",
+    "@types/react-router-dom": "^4.3.0",
     "@types/resolve": "0.0.8",
     "@types/sw-precache-webpack-plugin": "^0.11.0",
     "@types/uuid": "^3.4.4",
@@ -34,8 +39,10 @@
     "babel-preset-react-app": "^3.1.2",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "1.1.3",
+    "chalk": "^2.4.1",
+    "clipboard": "^2.0.1",
     "css-loader": "0.28.7",
+    "dayjs": "^1.7.5",
     "dotenv": "4.0.0",
     "dotenv-expand": "4.2.0",
     "eslint": "4.10.0",
@@ -50,6 +57,8 @@
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "js-cookie": "^2.2.0",
+    "lodash": "^4.17.11",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -59,6 +68,8 @@
     "react": "^16.5.0",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.0",
+    "react-loadable": "^5.5.0",
+    "react-router-dom": "^4.3.1",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
@@ -117,6 +128,14 @@
     "extends": "react-app"
   },
   "devDependencies": {
-    "eslint-config-alloy": "^1.4.2"
+    "@types/lodash-webpack-plugin": "^0.11.3",
+    "@types/node-sass": "^3.10.32",
+    "babel-plugin-lodash": "^3.3.4",
+    "eslint-config-alloy": "^1.4.2",
+    "lodash-webpack-plugin": "^0.11.5",
+    "node-sass": "^4.9.3",
+    "postcss-pxtorem": "^4.0.1",
+    "sass-loader": "^7.1.0",
+    "vconsole": "^3.2.0"
   }
 }
