--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
     "@types/lodash": "^4.14.116",
     "@types/object-assign": "^4.0.30",
     "@types/promise": "^7.1.30",
+    "@types/prop-types": "^15.5.5",
     "@types/qs": "^6.5.1",
     "@types/react-loadable": "^5.4.1",
+    "@types/react-redux": "^6.0.8",
     "@types/react-router-dom": "^4.3.0",
+    "@types/redux": "^3.6.0",
+    "@types/redux-logger": "^3.0.6",
+    "@types/redux-thunk": "^2.1.0",
     "@types/resolve": "0.0.8",
     "@types/sw-precache-webpack-plugin": "^0.11.0",
     "@types/uuid": "^3.4.4",
@@ -36,6 +41,7 @@
     "babel-eslint": "^9.0.0",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.2",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-react-app": "^3.1.2",
     "babel-runtime": "6.26.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
@@ -63,13 +69,18 @@
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
     "promise": "8.0.1",
+    "prop-types": "^15.6.2",
     "qs": "^6.5.2",
     "raf": "3.4.0",
     "react": "^16.5.0",
     "react-dev-utils": "^5.0.2",
     "react-dom": "^16.5.0",
     "react-loadable": "^5.5.0",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
     "sw-precache-webpack-plugin": "0.11.4",
@@ -130,12 +141,14 @@
   "devDependencies": {
     "@types/lodash-webpack-plugin": "^0.11.3",
     "@types/node-sass": "^3.10.32",
+    "@types/svg-sprite-loader": "^3.9.0",
     "babel-plugin-lodash": "^3.3.4",
     "eslint-config-alloy": "^1.4.2",
     "lodash-webpack-plugin": "^0.11.5",
     "node-sass": "^4.9.3",
     "postcss-pxtorem": "^4.0.1",
     "sass-loader": "^7.1.0",
+    "svg-sprite-loader": "^3.9.2",
     "vconsole": "^3.2.0"
   }
 }
