--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/react-redux": "^6.0.8",
     "@types/react-router-dom": "^4.3.0",
     "@types/redux": "^3.6.0",
+    "@types/redux-devtools-extension": "^2.13.2",
     "@types/redux-logger": "^3.0.6",
     "@types/redux-thunk": "^2.1.0",
     "@types/resolve": "0.0.8",
@@ -79,6 +80,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
