--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/eslint": "^4.16.3",
     "@types/extract-text-webpack-plugin": "^3.0.3",
     "@types/fs-extra": "^5.0.4",
+    "@types/history": "^4.7.0",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/jest": "^23.3.2",
     "@types/js-cookie": "^2.2.0",
@@ -24,6 +25,7 @@
     "@types/react-loadable": "^5.4.1",
     "@types/react-redux": "^6.0.8",
     "@types/react-router-dom": "^4.3.0",
+    "@types/react-router-redux": "^5.0.16",
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/redux-logger": "^3.0.6",
@@ -62,6 +64,7 @@
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
+    "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "js-cookie": "^2.2.0",
@@ -79,6 +82,7 @@
     "react-loadable": "^5.5.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
+    "react-router-redux": "^5.0.0-alpha.9",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
